terraform/nodePort.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    name: hello-kubernetes
