terraform/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /*
        #pathType: Prefix
        backend:
          service:
            name: hello-kubernetes
            port:
              number: 80
